--- a/proyectoscs/Proyectos.App/Proyectos.App.Presentacion/Pages/Index.cshtml
+++ b/proyectoscs/Proyectos.App/Proyectos.App.Presentacion/Pages/Index.cshtml
@@ -1,11 +1,62 @@
 ﻿@page
 @model IndexModel
 @{
-    var anyo = 2022;
+    var nombre = "Jhon Jairo Orozco d. - Ing.";
     ViewData["Title"] = "Proyectos-Sprint";
 }
 
 <div class="text-center">
-    <h1 class="display-4">BIENVENIDOS AL PROGRAMA DE PROYECTOS - @anyo</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">@nombre</h1>
+
+    <h2>Soy un desarrollador full stack</h2>
+
+    <img id="foto" src="~/img/foto.png" alt="Foto de Jhon" />
+    <img src="" alt="">
+</div>
+
+<div class="text-center">
+    <img src="~/img/logo.gif" alt="logo institucional" width="200px" heigh="200px" />
+</div>
+
+<div class="row justify-content-center text-center bg-primary">
+    <div class="col col-md-7 seccion-bienvenida">
+        <h1>Te doy la bienvenida a mi portafolio</h1>
+        <pre>
+            Desarrollador de Software a la medida de su Empresa
+            Lenguajes: Python, Java, C#, PHP
+            Bases de Datos: MySql, Postgres, SQLserver, Oracle
+            Modelado: UML - Relaciional - NO Relaciional
+            Metodologías: Scrum - Kanban - XP
+        </pre>
+    </div>
+</div>
+
+<div class="row justify-content-center text-center bg-primary">
+    <div class="card" style="width: 18rem;">
+    <img src="~/img/academia.jpg" class="card-img-top" alt="">
+    <div class="card-body">
+        <h5 class="card-title">Sistema Control de Notas</h5>
+        <p class="card-text">Sistema para la Administración y control de notas en un colegio</p>
+        <p class="card-text">Valor: 5.000.000</p>
+        <a href="#" class="btn btn-success">Ver detalles</a>
+    </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+    <img src="~/img/inventario.jpg" class="card-img-top" alt="">
+    <div class="card-body">
+        <h5 class="card-title">Sistema Control de Inventarios</h5>
+        <p class="card-text">Sistema para la Administración y control de las Entradas y Salidas de productos de un Almacén</p>
+        <p class="card-text">Valor: 10.000.000</p>
+        <a href="#" class="btn btn-primary">Ver detalles</a>
+    </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+    <img src="~/img/nomina.png" class="card-img-top" alt="">
+    <div class="card-body">
+        <h5 class="card-title">Sistema Control de Nominas</h5>
+        <p class="card-text">Sistema para la Administración y control de pagos en su empresa</p>
+        <p class="card-text">Valor: 7.000.000</p>
+        <a href="#" class="btn btn-danger">Ver detalles</a>
+    </div>
+    </div>
 </div>
