--- a/proyectoscs/Proyectos.App/Proyectos.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/proyectoscs/Proyectos.App/Proyectos.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Proyectos.App.Presentacion</title>
+    <title>@ViewData["Title"] - Proyectos</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Proyectos.App.Presentacion.styles.css" asp-append-version="true" />
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Formadores/Listar">Formadores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Tutores">Tutores</a>
                         </li>
                     </ul>
                 </div>
