--- a/Proyectos.App/Proyectos.App.Presentacion/Pages/Roles/Crear.cshtml
+++ b/Proyectos.App/Proyectos.App.Presentacion/Pages/Roles/Crear.cshtml
@@ -1,69 +1,39 @@
 ﻿@page
-@model Proyectos.App.Presentacion.Formadores.CrearModel
+@model Proyectos.App.Presentacion.Roles.CrearModel
 @{
-    ViewData["Title"] = "Crear Formador";
+    ViewData["Title"] = "Crear Rol";
 }
 
 <div class="card">
     <div class="card-header">
-        <h2 class="text-info">Crear un nuevo formador</h2>
+        <h2 class="text-info">Crear un nuevo Rol</h2>
     </div>
     <div class="card-body">
         <form method="post">
             <div asp-validation-sumary="ModelOnly" class="text-danger">
                 <div class="container" style="padding: 50px">
 
+                    
                     <div class="form-group">
                         <div class="row">
                             <div class="col-sm-2"> 
-                                <label asp-for="formador.identificacion"></label>
-                            </div>
-                            <div class="col-sm-3">
-                                <input asp-for="formador.identificacion" class="form-control" />
-                            </div>
-                            <span asp-validation-for="formador.identificacion" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-sm-2"> 
-                                <label asp-for="formador.nombre"></label>
+                                <label asp-for="Rol.nombre"></label>
                             </div>
                             <div class="col-sm-6">
-                                <input asp-for="formador.nombre" class="form-control" />
+                                <input asp-for="Rol.nombre" class="form-control" />
                             </div>
-                            <span asp-validation-for="formador.nombre" class="text-danger"></span>
+                            <span asp-validation-for="Rol.nombre" class="text-danger"></span>
                         </div>
                     </div>
+                    
+                                     
                     <div class="form-group">
                         <div class="row">
                             <div class="col-sm-2"> 
-                                <label asp-for="formador.mail"></label>
+                                <label asp-for="Rol.vigente" class="text-primary"></label>
                             </div>
                             <div class="col-sm-6">
-                                <input type="email" asp-for="formador.mail" class="form-control" />
-                            </div>
-                            <span asp-validation-for="formador.mail" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-sm-2"> 
-                                <label asp-for="formador.movil"></label>
-                            </div>
-                            <div class="col-sm-3">
-                                <input asp-for="formador.movil" class="form-control" />
-                            </div>
-                            <span asp-validation-for="formador.movil" class="text-danger"></span>
-                        </div>
-                    </div>                    
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-sm-2"> 
-                                <label asp-for="formador.vigente" class="text-primary"></label>
-                            </div>
-                            <div class="col-sm-6">
-                                <input type="checkbox" asp-for="formador.vigente" class="form-check-input" value="@Model.formador.vigente" checked />
+                                <input type="checkbox" asp-for="Rol.vigente" class="form-check-input" value="@Model.Rol.vigente" checked />
                             </div>
                         </div>
                     </div>
