--- a/Proyectos.App/Proyectos.App.Presentacion/Pages/Roles/Delete.cshtml
+++ b/Proyectos.App/Proyectos.App.Presentacion/Pages/Roles/Delete.cshtml
@@ -12,65 +12,38 @@
         <form method="post">
             <div asp-validation-sumary="ModelOnly" class="text-danger">
                 <!-- se envía campo de la PK oculto -->
-                <input type="hidden"  asp-for="formador.id" />
+                <input type="hidden"  asp-for="Rol.id" />
                 <div class="container" style="padding: 30px">
                     <div class="form-group">
                         <div class="row">
                             <div class="col-sm-2"> 
-                                <label asp-for="formador.id"  class="text-primary"></label>
+                                <label asp-for="Rol.id"  class="text-primary"></label>
                             </div>
                             <div class="col-sm-1">
-                                <input asp-for="formador.id" class="form-control" value = "@Model.formador.id" disabled />
+                                <input asp-for="Rol.id" class="form-control" value = "@Model.Rol.id" disabled />
                             </div>
                         </div>
                     </div>
+                   
                     <div class="form-group">
                         <div class="row">
                             <div class="col-sm-2"> 
-                                <label asp-for="formador.identificacion"  class="text-primary"></label>
-                            </div>
-                            <div class="col-sm-3">
-                                <input asp-for="formador.identificacion" class="form-control" value = "@Model.formador.identificacion" disabled />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-sm-2"> 
-                                <label asp-for="formador.nombre"  class=" text-primary"></label>
+                                <label asp-for="Rol.nombre"  class=" text-primary"></label>
                             </div>
                             <div class="col-sm-6">
-                                <input asp-for="formador.nombre" class="form-control" value = "@Model.formador.nombre" disabled />
+                                <input asp-for="Rol.nombre" class="form-control" value = "@Model.Rol.nombre" disabled />
                             </div>
                         </div>
                     </div>
+                    
+                    
                     <div class="form-group">
                         <div class="row">
                             <div class="col-sm-2"> 
-                                <label asp-for="formador.mail"  class=" text-primary"></label>
-                            </div>
-                            <div class="col-sm-6">
-                                <input type="email" asp-for="formador.mail" class="form-control" value = "@Model.formador.mail" disabled />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-sm-2"> 
-                                <label asp-for="formador.movil"  class=" text-primary"></label>
+                                <label asp-for="Rol.vigente"  class=" text-primary"></label>
                             </div>
                             <div class="col-sm-3">
-                                <input asp-for="formador.movil" class="form-control" value = "@Model.formador.movil" disabled />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-sm-2"> 
-                                <label asp-for="formador.vigente"  class=" text-primary"></label>
-                            </div>
-                            <div class="col-sm-3">
-                                <input class="form-check-input" type="checkbox" asp-for="formador.vigente" class="form-control" value = "@Model.formador.vigente" disabled />
+                                <input class="form-check-input" type="checkbox" asp-for="Rol.vigente" class="form-control" value = "@Model.Rol.vigente" disabled />
                             </div>
                         </div>
                     </div>
